fix spacing after </ul>

--- a/css/_slides.scss
+++ b/css/_slides.scss
@@ -78,7 +78,7 @@
         margin-bottom: 0.2em;
     }
 
-    ul + h3 {
+    ul + h3, ul + p, pre + p {
         margin-top: 0.8em;
     }
 
